--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -19,9 +19,10 @@ output:
   keep_tex: yes
   latex_engine: xelatex
   number_sections: no
-  toc: yes
+  toc: no
  bookdown::word_document2:
   toc: no
+  number_sections: no
   keep_md: yes
 fontsize: 12pt
 linestretch: 1.5
@@ -118,7 +119,7 @@ There are many details to consider when starting to use NEON organismal data pro
 include_graphics(here::here("manuscript/figures/fig_1.png"))
 ```
 
-(ref:Table0MappingCap) Mapping NEON data products to ecocomDP formatted data packages with abundances _standardized_ to observation effort.
+(ref:Table0MappingCap) Mapping NEON data products to ecocomDP formatted data packages with abundances _standardized_ to observation effort. \*BIRD counts are reported per taxon per “cluster” observed in each point count in the NEON data product and have not been further standardized to sampling effort because standard methods for modeling bird abundances are beyond the scope of this paper. \*\*Incidence rate per number of tests conducted is reported for TICK_PATHOGENS.
 
 ```{r dataMapping, echo=FALSE}
 select(data_summary, `Taxon group` = taxon_group, 
@@ -135,15 +136,14 @@ select(data_summary, `Taxon group` = taxon_group,
  kableExtra::kable_styling(bootstrap_options = c("striped", "scale_down", "condensed", "hover"), 
               latex_options = c("striped", "scale_down"))
 ```
-\*BIRD counts are reported per taxon per “cluster” observed in each point count in the NEON data product and have not been further standardized to sampling effort because standard methods for modeling bird abundances are beyond the scope of this paper.  
-\*\*Incidence rate per number of tests conducted is reported for TICK_PATHOGENS.
+
 
 
 ## Terrestrial Organisms
 
 ### Breeding Land Birds
 
-**NEON Sampling Design** NEON designates breeding landbirds as “smaller birds (usually exclusive of raptors and upland game birds) not usually associated with aquatic habitats'' [@ralph1993handbook]. Most species observed are diurnal and include both resident and migrant species. Landbirds are surveyed via point counts in each of the 47 terrestrial sites. At most NEON sites, breeding landbird points are located in five to ten 3 x 3 m grids (Fig. \@ref(fig:Fig1Design)), which are themselves located in representative (dominant) vegetation. Whenever possible, grid centers are co-located with distributed base plot centers. When sites are too small to support a minimum of five grids, separated by at least 250 m from edge to edge, point counts are completed at single points instead of grids. In these cases, points are located at the southwest corners of distributed base plots within the site. Five to 25 points may be surveyed depending on the size and spatial layout of the site, with exact point locations dictated by a stratified-random spatial design that maintains a 250 m minimum separation between points. 
+**NEON Sampling Design** NEON designates breeding landbirds as "smaller birds (usually exclusive of raptors and upland game birds) not usually associated with aquatic habitats" [@ralph1993handbook]. Most species observed are diurnal and include both resident and migrant species. Landbirds are surveyed via point counts in each of the 47 terrestrial sites. At most NEON sites, breeding landbird points are located in five to ten 3 $\times$ 3 m grids (Fig. \@ref(fig:Fig1Design)), which are themselves located in representative (dominant) vegetation. Whenever possible, grid centers are co-located with distributed base plot centers. When sites are too small to support a minimum of five grids, separated by at least 250 m from edge to edge, point counts are completed at single points instead of grids. In these cases, points are located at the southwest corners of distributed base plots within the site. Five to 25 points may be surveyed depending on the size and spatial layout of the site, with exact point locations dictated by a stratified-random spatial design that maintains a 250 m minimum separation between points. 
 
 Surveys occur during one or two sampling bouts per season, at large and small sites respectively. Observers go to the specified points early in the morning and track birds observed during each minute of a 6-minute period, following a 2-minute acclimation period, at each point. Each point count contains species, sex, and distance to each bird (measured with a laser rangefinder except in the case of flyovers) seen or heard. Information relevant for subsequent modeling of detectability is also collected during the point counts (e.g., weather, detection method). The point count surveys for NEON were modified from the Integrated Monitoring in Bird Conservation Regions (IMBCR) field protocol for spatially-balanced sampling of landbird populations [@pavlacky2017statistically].  
 
@@ -180,7 +180,7 @@ NEON collects mosquito specimens using Center for Disease Control (CDC) CO~2~ li
 
 Following field collection, NEON’s field ecologists process, package, and ship the samples to an external lab where mosquitoes are identified to species and sex (when possible). A subset of identified mosquitoes are tested for infection by pathogens to quantify the presence/absence and prevalence of various arboviruses. Some mosquitoes are set aside for DNA barcode analysis as well as long-term archiving. Particularly rare or difficult to identify mosquito specimens are prioritized for DNA barcoding. More details can be found in @hoekman2016design.
 
-**Data Wrangling Decisions** The mosquito data product (`DP1.10043.001`) consists of four data frames: trapping data (`mos_trapping`), sorting data (`mos_sorting`), archiving data (`mos_archivepooling`), and expert taxonomist processed data (`mos_expertTaxonomistIDProcessed`). We first removed rows (records) with missing information about location, collection date, and sample or subsample ID for all data frames. We then merged all four data frames into one, wherein we only kept records for target taxa (i.e., `targetTaxaPresent == "Y"`) with no known compromised sampling condition (i.e., `sampleCondition == "No known compromise"`). We further removed a small number of records with species identified only to the family level; all remaining records were identified at least to the genus level. We estimated the total individual count per trap-hour for each species within a trap as `(individualCount/subsampleWeight) * totalWeight / trapHours`. We then removed columns that were not likely to be used for calculating biodiversity values. 
+**Data Wrangling Decisions** The mosquito data product (`DP1.10043.001`) consists of four data frames: trapping data (`mos_trapping`), sorting data (`mos_sorting`), archiving data (`mos_archivepooling`), and expert taxonomist processed data (`mos_expertTaxonomistIDProcessed`). We first removed rows (records) with missing information about location, collection date, and sample or subsample ID for all data frames. We then merged all four data frames into one, wherein we only kept records for target taxa (i.e., targetTaxaPresent = "Y") with no known compromised sampling condition (i.e., sampleCondition = "No known compromise"). We further removed a small number of records with species identified only to the family level; all remaining records were identified at least to the genus level. We estimated the total individual count per trap-hour for each species within a trap as `(individualCount/subsampleWeight) * totalWeight / trapHours`. We then removed columns that were not likely to be used for calculating biodiversity values. 
 
 ### Small Mammals
 
@@ -190,7 +190,7 @@ Following field collection, NEON’s field ecologists process, package, and ship
 
 ### Soil Microbes
 
-**NEON Sampling Design** Soil samples are collected at ten 40 x 40 m2 NEON plots per site. Four plots are within the tower airshed (tower plots), and six plots are distributed across the landscape (gradient plots). At each sampling time, soils are sampled from three of four subplots, and one sample is collected from a randomly-generated XY coordinate location within each subplot. At each sampling location, soils are taken at the surface horizon most years, but from both organic and mineral horizons every five years during coordinated microbe/biogeochemistry bouts. Most sites, except for the boreal/arctic sites, are sampled three times a year, once at peak vegetation greenness and two other times bracketing that period. This results in ~10 plots * 3 locations * 1 or 2 horizons * 3 periods = 90 - 180 soil samples per site per year for most sites. Samples for microbial biomass, composition, and metagenomics are stored on dry ice and shipped to an external lab (variable depending on year) for downstream processing.
+**NEON Sampling Design** Soil samples are collected at ten 40 m $\times$ 40 m NEON plots per site. Four plots are within the tower airshed (tower plots), and six plots are distributed across the landscape (gradient plots). At each sampling time, soils are sampled from three of four subplots, and one sample is collected from a randomly-generated XY coordinate location within each subplot. At each sampling location, soils are taken at the surface horizon most years, but from both organic and mineral horizons every five years during coordinated microbe/biogeochemistry bouts. Most sites, except for the boreal/arctic sites, are sampled three times a year, once at peak vegetation greenness and two other times bracketing that period. This results in ~10 plots $\times$ 3 locations $\times$ 1 or 2 horizons $\times$ 3 periods = 90 - 180 soil samples per site per year for most sites. Samples for microbial biomass, composition, and metagenomics are stored on dry ice and shipped to an external lab (variable depending on year) for downstream processing.
 
 **Data Wrangling Decisions** Unlike other NEON biodiversity data products, the soil microbial data product (`DP1.10107.001`) requires significant pre-processing to go from raw sequence data to a community matrix, and the exact bioinformatics methods will vary depending on use case. Briefly, major decisions during this process will depend on whether users are working with fungal (ITS) or bacterial (16S) data, if the goal is to maximize read quality and taxonomic resolution vs. number of reads retained through the quality filter process, and whether to remove or retain reverse complement reads for a merged sequence. The full description of a suggested bioinformatics pipeline, how to run sensitivity analyses on user-defined parameters, accompanying code, and vignettes are described in Qin et al. in this issue. At the end of the suggested bioinformatics pipeline, users will have a phyloseq object, which is a commonly-used format for sequence-based analysis software. The phyloseq object will contain a table of ASV (amplicon sequence variant) sequences, a table of taxonomic assignments, and soil chemical and physical data associated with corresponding sample locations and sampling bouts.
 
@@ -323,7 +323,7 @@ include_graphics(here::here("manuscript/figures/beetle_rarefaction.png"))
 
 # Discussion (or how to maintain and update standardized NEON organismal data)
 
-NEON organismal data hold enormous potential to understand biodiversity change across space and time [@balch2019neon, @jones2021synergies]. Multiple biodiversity research and education programs have used NEON data even before NEON became fully operational in May 2019 [e.g., @farrell2018power; @read2018among]. With the expected long-term investment to maintain NEON over the next 30 years, NEON organismal data will be an invaluable tool for understanding and tracking biodiversity change. NEON data are unique relative to data collected by other similar networks (e.g., LTER, CZO) because observation collection protocols are standardized across sites, enabling researchers to address macroscale questions in environmental science without having to synthesize disparate data sets that differ in collection methods [@jones2021synergies]. The data package presented in this paper holds great potential in making NEON data easier to use and more comparable across studies. Whereas the data collection protocols implemented by NEON staff are standardized, the decisions NEON data users make in wrangling their data after downloading NEON’s open data will not necessarily be similar unless the user community adopts a community data standard, such as the ecocomDP data model. Adopting such a data model early on in the life of the observatory will ensure that results of studies using NEON data will be easier to compare and synthesize. By providing a standardized and easy-to-use data package of NEON organismal data, our effort here will significantly lower the barriers to use the NEON organismal data for biodiversity research by many current and future researchers and will ensure that studies using NEON organismal data are comparable.
+NEON organismal data hold enormous potential to understand biodiversity change across space and time [@balch2019neon; @jones2021synergies]. Multiple biodiversity research and education programs have used NEON data even before NEON became fully operational in May 2019 [e.g., @farrell2018power; @read2018among]. With the expected long-term investment to maintain NEON over the next 30 years, NEON organismal data will be an invaluable tool for understanding and tracking biodiversity change. NEON data are unique relative to data collected by other similar networks (e.g., LTER, CZO) because observation collection protocols are standardized across sites, enabling researchers to address macroscale questions in environmental science without having to synthesize disparate data sets that differ in collection methods [@jones2021synergies]. The data package presented in this paper holds great potential in making NEON data easier to use and more comparable across studies. Whereas the data collection protocols implemented by NEON staff are standardized, the decisions NEON data users make in wrangling their data after downloading NEON’s open data will not necessarily be similar unless the user community adopts a community data standard, such as the ecocomDP data model. Adopting such a data model early on in the life of the observatory will ensure that results of studies using NEON data will be easier to compare and synthesize. By providing a standardized and easy-to-use data package of NEON organismal data, our effort here will significantly lower the barriers to use the NEON organismal data for biodiversity research by many current and future researchers and will ensure that studies using NEON organismal data are comparable.
 
 There are some important notes about the data package we provided. First, our processes assume that NEON already did its best to make sure that species identifications are correct. Since records may be identified to any level of taxonomic resolution, and IDs above the genus level may not be useful for most biodiversity projects, we removed records with such IDs for groups that are relatively easier to identify (i.e., fish, plant, small mammals) or have very few taxon IDs that are above genus level (i.e., mosquito). However, for groups that are hard to identify (i.e., algae, beetle, bird, macroinvertebrate, tick, and tick pathogen), we decided to keep all records no matter what level of taxon IDs they have. Such information can be useful if we are interested in questions such as species-to-genus ratio or species rarefaction curves at different taxonomic levels (e.g., Fig. \@ref(fig:Fig3Curve)). Users thus need to think carefully about which level of taxon IDs they need for their research. Another note regarding species names is the term ‘sp.’ vs ‘spp.’ across NEON organismal data collections. The term ‘sp.’ refers to a single morphospecies whereas the term ‘spp.’ refers to more than one morphospecies. This is an important point to consider for community ecology biodiversity analyses because it may add uncertainty into estimates of biodiversity metrics such as species richness. Second, we kept records without any observed species/individuals in some taxonomic groups (i.e., beetle, bird, small mammal), thus preserving “true zeroes”. Such empty records provide critical information about sampling efforts. For example, if two sites both have the same number of small mammals during the same time period, however, one site has many more empty records (traps), then we can infer that the abundances of small mammals are lower than the other site. If such information is not needed in a project, then they can be removed. Third, for algae, birds, and beetles, we added standardized measurements as density (algae) and number of fish caught per hour or number of beetles caught per trap night in the data package. And finally, there are other organismal groups (Aquatic Microbes and Aquatic Plants; soil microbes are covered in Qin et al. in this issue) not included in this study given the complexity of the data.   
 
