--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -327,7 +327,7 @@ NEON organismal data hold enormous potential to understand biodiversity change a
 
 There are some important notes about the data package we provided. First, our processes assume that NEON already did its best to make sure that species identifications are correct. Since records may be identified to any level of taxonomic resolution, and IDs above the genus level may not be useful for most biodiversity projects, we removed records with such IDs for groups that are relatively easier to identify (i.e., fish, plant, small mammals) or have very few taxon IDs that are above genus level (i.e., mosquito). However, for groups that are hard to identify (i.e., algae, beetle, bird, macroinvertebrate, tick, and tick pathogen), we decided to keep all records no matter what level of taxon IDs they have. Such information can be useful if we are interested in questions such as species-to-genus ratio or species rarefaction curves at different taxonomic levels (e.g., Fig. \@ref(fig:Fig3Curve)). Users thus need to think carefully about which level of taxon IDs they need for their research. Another note regarding species names is the term ‘sp.’ vs ‘spp.’ across NEON organismal data collections. The term ‘sp.’ refers to a single morphospecies whereas the term ‘spp.’ refers to more than one morphospecies. This is an important point to consider for community ecology biodiversity analyses because it may add uncertainty into estimates of biodiversity metrics such as species richness. Second, we kept records without any observed species/individuals in some taxonomic groups (i.e., beetle, bird, small mammal), thus preserving “true zeroes”. Such empty records provide critical information about sampling efforts. For example, if two sites both have the same number of small mammals during the same time period, however, one site has many more empty records (traps), then we can infer that the abundances of small mammals are lower than the other site. If such information is not needed in a project, then they can be removed. Third, for algae, birds, and beetles, we added standardized measurements as density (algae) and number of fish caught per hour or number of beetles caught per trap night in the data package. And finally, there are other organismal groups (Aquatic Microbes and Aquatic Plants; soil microbes are covered in Qin et al. in this issue) not included in this study given the complexity of the data.   
 
-All code for the Data Wrangling Decisions are available within the R package `ecocomDP` (Github and Zenodo, https://github.com/EDIorg/ecocomDP). Users can modify the code if they need to make different decisions during the data wrangling process and correct any mistakes in our code by submitting a pull request to our Github repository. If researchers wish to generate their own derived organismal data sets from NEON data with slightly different decisions than the ones outlined in this paper, we recommend that they use the ecocomDP framework, contribute their workflow to the ecocomDP R package, upload the data to the EDI repository, and cite their data with the discoverable DOI given to them by EDI. Note that the ecocomDP data model was intended for community ecology analyses and may not be well suited for population-level analyses. 
+All code for the Data Wrangling Decisions are available within the R package `ecocomDP` (https://github.com/EDIorg/ecocomDP). Users can modify the code if they need to make different decisions during the data wrangling process and correct any mistakes in our code by submitting a pull request to our Github repository. If researchers wish to generate their own derived organismal data sets from NEON data with slightly different decisions than the ones outlined in this paper, we recommend that they use the ecocomDP framework, contribute their workflow to the ecocomDP R package, upload the data to the EDI repository, and cite their data with the discoverable DOI given to them by EDI. Note that the ecocomDP data model was intended for community ecology analyses and may not be well suited for population-level analyses. 
 
 Because `ecocomDP` is an R package to host code to harmonize different datasets following the ecocomDP format, we developed an R data package `neonDivData` to host and distribute the standardized NEON organismal data derived from `ecocomDP`. A separate dedicated data package has several advantages. First, it is easier and readily to use and saves time for users to run the code in `ecocomDP` to download and standardize NEON data products. Second, it is also easy to update the data package when new raw data products are uploaded by NEON to their data portal; and the updating process does not require any change in the `ecocomDP` package. This is ideal because `ecocomDP` harmonizes many different datasets besides NEON data. Third, the [Github repository page of `neonDivData`]((https://github.com/daijiang/neonDivData)) can serve as a discussion forum for researchers regarding the NEON data products without competing for attention in the `ecocomDP` Github repository page. By opening issues on the Github repository, users can discuss and contribute to improve our workflow of standardizing NEON data products. Users can also discuss whether there are other data models that the NEON user community should adopt at the inception of the observatory. As the observatory moves forward, this is an important discussion for the NEON user community and NEON technical working groups to promote synthesis of NEON data with data from other efforts (e.g., LTER, CZO, Ameriflux, the International LTER, National Phenology Network, Long Term Agricultural Research Network).
 
