--- a/manuscript/ms.Rmd
+++ b/manuscript/ms.Rmd
@@ -268,7 +268,7 @@ The fish data product (`DP1.20107.001`) consists of `fsh_perPass`, `fsh_fieldDat
 
 # Results (or how to get and use standardized NEON organismal data)
 
-All cleaned and standardized datasets can be obtained from the R package `neonDivData`, which can be installed from Github (we will submit it to CRAN in the future). Installation instructions can be found on the Github webpage (https://github.com/daijiang/neonDivData). Table \@ref(tab:dataSummary) shows the brief summary of all data objects. To get data for a specific taxonomic group, we can just call the objects in the `R object` column in Table \@ref(tab:dataSummary). Such data products include cleaned (and standardized if needed) occurrence data for the taxonomic groups covered and are equivalent to the “observation” table of the ecocomDP data format. If environmental information and species measurements were provided by NEON for some taxonomic groups, they are also included in these data objects. Information such as latitude, longitude, and elevation for all taxonomic groups were saved in the `neon_location` object of the R package, which is equivalent to the “sampling_location” table of the ecocomDP data format. Information about species scientific names of all taxonomic groups were saved in the `neon_taxa` object, which is equivalent to the “taxon” table of the ecocomDP data format. 
+All cleaned and standardized datasets can be obtained from the R package `neonDivData`, which can be installed from Github. Installation instructions can be found on the Github webpage (https://github.com/daijiang/neonDivData). Table \@ref(tab:dataSummary) shows the brief summary of all data objects. To get data for a specific taxonomic group, we can just call the objects in the `R object` column in Table \@ref(tab:dataSummary). Such data products include cleaned (and standardized if needed) occurrence data for the taxonomic groups covered and are equivalent to the “observation” table of the ecocomDP data format. If environmental information and species measurements were provided by NEON for some taxonomic groups, they are also included in these data objects. Information such as latitude, longitude, and elevation for all taxonomic groups were saved in the `neon_location` object of the R package, which is equivalent to the “sampling_location” table of the ecocomDP data format. Information about species scientific names of all taxonomic groups were saved in the `neon_taxa` object, which is equivalent to the “taxon” table of the ecocomDP data format. 
 
 (ref:Table1SummaryCap) Summary of data products included in this study (as of `r format(Sys.time(), "%d %B, %Y")`). Users can call the R objects in the `R object` column from the R data package `neonDivData` to get the standardized data for specific taxonomic groups.
 
