--- a/manuscript/ref.bib
+++ b/manuscript/ref.bib
@@ -640,3 +640,144 @@
   year={1993},
   publisher={Pacific Southwest Research Station}
 }
+
+@techreport{thibault2018TOS,
+  title={TOS Protocol and Procedure: Breeding Landbird Abundance and Diversity. NEON.DOC.014041vJ},
+  author={Thibault, K.},
+  year={2018},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{thibault2019TOS,
+  title={TOS Protocol and Procedure: Small Mammal Sampling. NEON.DOC.000481vL},
+  author={Thibault, K. and Tsao, K. and Springer, Y. and Knapp, L.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+
+@techreport{Elmendorf2018,
+  title={NEON Algorithm Theoretical Basis Document (ATBD): OS General Transitions. NEON.DOC.004825vA},
+  author={Elmendorf, S. and Brownlee, H.},
+  year={2018},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{LeVan2019,
+  title={TOS Protocol and Procedure: Ground Beetle Sampling. NEON.DOC.014041vJ},
+  author={LeVan, K. and Robinson, N. and Hoekman, D. and Blevins, K.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{LeVan2019b,
+  title={TOS Protocol and Procedure: MOS - Mosquito Sampling. NEON.DOC.014049vL},
+  author={LeVan, K. and Paull, S. and Tsao, K. and Hoekman, D. and Springer, Y.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{LeVan2019c,
+  title={TOS Protocol and Procedure: Tick and Tick-borne Pathogen Sampling. NEON.DOC.014045vK},
+  author={LeVan, K. and Thibault, K. and Tsao, K. and Springer, Y.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{LeVan2020,
+  title={NEON User Guide to Ground Beetles Sampled from Pitfall Traps (DP1.10022.001).version C.},
+  author={LeVan, K.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{LeVan2020b,
+  title={NEON User Guide to Mosquitoes Sampled From CO2 Traps (DP1.10043.001) and Mosquito-borne Pathogen Satatus (DP1.10041.001).version C.},
+  author={LeVan, K.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Stanish2020,
+  title={TOS Protocol and Procedure: SLS - Soil Biogeochemical and Microbial Sampling. NEON.DOC.014048vN},
+  author={Stanish, L. and Weintraub, S. and Hinckley, E-L. S. and Parnell, J.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Barnett2019,
+  title={TOS Protocol and Procedure: DIV - Plant Diversity Sampling. NEON.DOC.014042vK},
+  author={Barnett, D.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Cawley2016,
+  title={NEON Aquatic Sampling Strategy. NEON.DOC.001152vA},
+  author={Cawley, K. M. and Parker, S. and Utz, R. and Goodman, K. and Scott, C. and Fitzgerald, M. and Vance, J. and Jensen, B. and Bohall, C. and Baldwin, T.},
+  year={2016},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Parker2019,
+  title={AOS Protocol and Procedure: INV - Aquatic Macroinvertebrate Sampling. NEON.DOC.003046vE},
+  author={Parker, S.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Parker2020,
+  title={AOS Protocol and Procedure: ALG - Periphyton and Phytoplankton Sampling. NEON.DOC.003045vE},
+  author={Parker, S.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Chesney2021,
+  title={NEON User Guide to Aquatic Macroinvertebrate Collection (DP1.20120.001). Revision B},
+  author={Chesney, T. and Parker, S. and Scott, C.},
+  year={2021},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{ParkerVance2020,
+  title={NEON User Guide to Periphyton and Phytoplankton Collection (DP1.20166.001). Revision C},
+  author={Parker, S. and Vance, T.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{ParkerRoehm2019,
+  title={AOS Protocol and Procedure: ZOO - Zooplankton Sampling in Lakes. NEON.DOC.001194},
+  author={Parker, S. and Roehm, C.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{ParkerScott2020,
+  title={NEON User Guide to Aquatic Zooplankton Collection (DP1.20219.001). Revision B},
+  author={Parker, S. and Scott, C.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Jensen2019a,
+  title={AOS Protocol and Procedure: Fish Sampling in Wadeable Streams. NEON.DOC.001295vF},
+  author={Jensen, B. and Parker, S. and Fischer, J. R.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Jensen2019b,
+  title={AOS Protocol and Procedure: Fish Sampling in Lakes. NEON.DOC.001296vF},
+  author={Jensen, B. and Parker, S. and Fischer, J. R.},
+  year={2019},
+  institution={NEON (National Ecological Observatory Network)}
+}
+
+@techreport{Monahan2020,
+  title={NEON User Guide to Fish Electrofishing, Gill Netting, and Fyke Netting Counts (DP1.20107.001). Revision B},
+  author={Monahan, D. and Jensen, B. and Parker, S. and Scott, C.},
+  year={2020},
+  institution={NEON (National Ecological Observatory Network)}
+}
